--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <!--BTS JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" defer integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <!--My JS-->
-    <link rel="stylesheet" href="../Youtube-Api/Views/Css/youtubePirata.css">
+    <link rel="stylesheet" href="./Views/Css/youtubePirata.css">
 </head>
 <body>
     <nav>
         <div class="row">
             <div class="col-3">
-                <img src="../Images/youtube-logo-81.png" alt="">
+                <img src="./Views/Images/youtube-logo-81.png" alt="">
             </div>
             <div class="col-6">
                 <div class="input-group mb-3">
@@ -78,6 +78,6 @@
             </div>
         </div>
     </footer>
-    <script type="module" src="../Youtube-Api/Controller/controlador.js" ></script>
+    <script type="module" src="./Controller/controlador.js" ></script>
 </body>
 </html>
